--- a/learn-haskell.cabal
+++ b/learn-haskell.cabal
@@ -30,5 +30,5 @@ executable learn-haskell
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.16.4.0
-    hs-source-dirs:   app
+    hs-source-dirs:   src
     default-language: Haskell2010
