--- a/learn-haskell.cabal
+++ b/learn-haskell.cabal
@@ -25,7 +25,7 @@ executable learn-haskell
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:    Chapter7.Geometry, Chapter8.MyDataType
+    other-modules:    Chapter7.Geometry, Chapter8.MyDataType Chapter9.IO
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
